cloudformation/ec2.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Hands-on template for EC2

#------------------------------------------------------
#  AWS CLIの実行の仕方
#  aws cloudformation create-stack --stack-name handson-cfn-ec2 --template-body file://ec2.yaml
#------------------------------------------------------

#------------------------------------------------------
#  パラメーター(VPC)
#------------------------------------------------------
Parameters:
  VPCStack:
    Type: String
    Default: handson-cfn

Resources:
#------------------------------------------------------
#  EC2Instance
#------------------------------------------------------
  EC2WebServer01:
    Type: AWS::EC2::Instance
    Properties:
      # Ubuntu 22.04を使用
      ImageId: ami-088da9557aae42f39
      # Amazon linuxを利用
      # AMIのイメージ
      # ImageId: ami-09bad682e5ae72267
      # インスタンスタイプ
      InstanceType: t3.micro
      # セキュリティインポート
      SubnetId:
        Fn::ImportValue: !Sub ${VPCStack}-PublicSubnet1
      # EBS設定
      BlockDeviceMappings:  
        - DeviceName: /dev/xvda
          Ebs:
            VolumeType: gp3
            DeleteOnTermination: true 
            VolumeSize: 10
      # EC2の名前
      Tags:
        - Key: Name
          Value: EC2WebServer01
      # インストールコマンド
      UserData: !Base64 |
        #! /bin/bash
      # セキュリティーグループ使用
      SecurityGroupIds:
        - !Ref EC2SG
#------------------------------------------------------
#  セキュリティーグループ(EC2Instance)
#------------------------------------------------------
  EC2SG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: sg for web server
      VpcId:
        Fn::ImportValue: !Sub ${VPCStack}-VPCID
      SecurityGroupIngress:
        # HTTP接続
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 80
          ToPort: 80
        # SSH接続
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 22
          ToPort: 22
        # HTTPS接続
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 443
          ToPort: 443
#------------------------------------------------------
#  Outputsセクション
#------------------------------------------------------
Outputs:
  EC2WebServer01:
    Value: !Ref EC2WebServer01
    Export:
      Name: !Sub ${AWS::StackName}-EC2WebServer01
